tests/expectations/compiler/constants/tuple_definition_fail.out
Error [EPAR0370005]: expected an identifier -- found '('
    --> compiler-test:3:11
     |
   3 |     const (HELLO,GOODBYE): (u8,u8) = (1u8, 1u8);
     |           ^
